--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="肺炎疫情实时动态 · 地级市"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="肺炎疫情实时动态 · 地级市" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>智慧萧山-肺炎疫情实时省市地图</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>肺炎疫情实时省市地图 | 山月</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,14 +38,50 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102193749-4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102193749-4"></script>
+  <script src="http://o.cztvcloud.com/6/6111507/images/assets/js/jquery.js"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-102193749-4');
+  </script>
+  <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 
-      gtag('config', 'UA-102193749-4');
-    </script>
-  </body>
+  <script>
+    $.ajax({
+      url: 'http://h5.xianghunet.com/wx/wx_ce.php',
+      data: {
+        href: window.location.href
+      },
+      type: 'post',
+      contentType: "application/x-www-form-urlencoded",
+    }).then(res => {
+      res.jsApiList = ['onMenuShareAppMessage', 'onMenuShareTimeline']
+      // res.debug = true
+      wx.config(res)
+      wx.ready(() => {
+        var news_title = document.title
+        var news_link = location.href
+        var news_image = 'http://h5.xianghunet.com/zh/dist/img/coronavirus.png'
+        var news_intro = document.title
+        wx.onMenuShareAppMessage({
+          title: news_title,
+          desc: news_intro,
+          link: news_link,
+          imgUrl: news_image,
+        })
+        wx.onMenuShareTimeline({
+          title: news_title,
+          link: news_link,
+          imgUrl: news_image,
+        })
+      })
+    })
+  </script>
+</body>
+
 </html>
