--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>肺炎疫情实时省市地图 | 山月</title>
+  <title>疫情实时动态</title>
 </head>
 
 <body>
